src/public/css/index.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: Arial, sans-serif;
}

body {
	background-color: #f5f5f5;
}

.loginPrincipalContainer {
	display: flex;
	width: 100vw;
	height: 100vh;
	overflow: hidden;
	box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
	background-color: #fff;
}

.loginLeftSideStyle {
	flex: 1;
	background-color: #333;
	position: relative;
	overflow: hidden;
}

.loginBarberPoleStyle {
	width: 100%;
	height: 100%;
	object-fit: cover;
	object-position: right center;
	transform: scale(1.3) translate(-25px, -18px);
	opacity: 70%;
	z-index: 0;
}

.loginBackButton {
	position: absolute;
	width: 100px;
	padding: 12px;
	right: 30px;
	bottom: 20px;
	background-color: #a3a31a;
	color: #fff;
	border: none;
	border-radius: 5px;
	font-size: 15px;
	cursor: pointer;
	margin-bottom: 15px;
	z-index: 1;
	opacity: 200%;
}

.loginRightSideStyle {
	flex: 1;
	display: flex;
	flex-direction: column;
	position: relative;
	justify-content: center;
	align-items: center;
}

.loginLogoContainer {
	width: 130px;
	position: absolute;
	top: 20px;
	right: 20px;
	z-index: 2;
}

.loginLogoStyle {
	width: 100%;
}

.loginSecondContainer {
	width: 350px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 40px;
	background-color: #dee33e;
	border-radius: 15px;
	margin: 0;
}

.loginTitleStyle {
	font-size: 25px;
	margin-bottom: 25px;
	color: #333;
	text-align: center;
}

.loginFormStyle {
	width: 100%;
}

.loginInputGroupStyle {
	position: relative;
	margin-bottom: 15px;
}

.loginInputStyle {
  width: 100%;
  padding: 12px;
  border: none;
  border-radius: 5px;
  background-color: #fff;
  font-size: 15px;
  outline: none;
  margin-top: 10px;
}

.loginLoginButton {
	width: 100%;
	padding: 12px;
	background-color: #a3a31a;
	color: #fff;
	border: none;
	border-radius: 5px;
	font-size: 15px;
	cursor: pointer;
	transition: background-color 0.3s;
	margin-bottom: 15px;
}

.loginLoginButton:hover {
	background-color: #8a8a15;
}

.loginRegisterLink {
	text-align: center;
	font-size: 12px;
	color: #333;
}

.loginRegisterLink a {
	color: #333;
	text-decoration: none;
	font-weight: bold;
}

@media (max-width: 768px) {
	.loginPrincipalContainer {
		flex-direction: column;
		width: 90%;
		height: auto;
	}

	.loginLeftSideStyle {
		display: none;
	}

	.loginRightSideStyle {
		width: 100%;
	}

	.loginSecondContainer {
		width: 90%;
		margin: 10px auto;
		padding: 20px;
	}
}

/*signUpSection*/

.signupPrincipalContainer {
	display: flex;
	width: 100vw;
	height: 100vh;
	border-radius: 0px;
	overflow: hidden;
	box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
	background-color: #fff;
}

.signupFormContainer {
	width: 50%;
	max-width: 90%;
	background: white;
	position: relative;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.signupLogoImage {
	width: 130px;
	position: absolute;
	top: 20px;
	left: 15px;
	z-index: 2;
}

.signupLogoImage img {
	width: 100%;
}

.signupFormBox {
  width: 500px;
  background: #dee33e;
  padding: 40px;
  border-radius: 15px;
  margin-top: 0px;
}

.signupInputLabel {
  display: block;
  margin-bottom: 4px;
  font-size: 14px;
  color: #333;
  font-weight: 500;
}

.signupFieldContainer {
  display: flex;
  flex-direction: column;
  flex: 1;
  margin-right: 10px;
}

.signupTitleStyle {
	font-size: 25px;
	margin-bottom: 25px;
	color: #333;
	text-align: center;
}

.signupInputRow {
	display: flex;
	gap: 10px;
	margin-bottom: 10px;
}

.signupInputStyle {
  width: 100%;
  padding: 12px;
  margin-bottom: 10px;
  border: none;
  border-radius: 5px;
  background-color: #fff;
  font-size: 15px;
  outline: none;
  margin-top: 5px;
}

.signupInputStyle::placeholder {
	color: #666;
	font-size: 15px;
}

.signupInputStyle:focus {
	outline: none;
}

.signupPasswordField {
	position: relative;
	margin-bottom: 10px;
}

.signupRegisterButton {
	width: 100%;
	padding: 12px;
	background-color: #a3a31a;
	color: #fff;
	border: none;
	border-radius: 5px;
	font-size: 15px;
	cursor: pointer;
	transition: background-color 0.3s;
	margin-bottom: 15px;
}

.signupRegisterButton:hover {
	background-color: #8a8a15;
}

.signupLoginLink {
	text-align: center;
	font-size: 12px;
	color: #333;
}

.signupLoginLink a {
	color: #333;
	text-decoration: none;
	font-weight: bold;
}

.signupLoginLink a:hover {
	text-decoration: underline;
}

.signupImageContainer {
	width: 50%;
	background-image: url("../assets/signUp/barberChair.jpeg");
	background-size: cover;
	background-position: center;
}

.signupBackButton {
	position: absolute;
	width: 100px;
	padding: 12px;
	left: 30px;
	bottom: 20px;
	background-color: #a3a31a;
	color: #fff;
	border: none;
	border-radius: 5px;
	font-size: 15px;
	cursor: pointer;
	margin-bottom: 15px;
	z-index: 1;
	opacity: 200%;
}

@media (max-width: 768px) {
	.signupPrincipalContainer {
		flex-direction: column;
		width: 90%;
		height: auto;
	}

	.signupImageContainer {
		display: none;
	}

	.signupFormContainer {
		width: 100%;
	}

	.signupLogoImage {
		position: relative;
		top: 20px;
		left: 0;
		text-align: center;
		width: 100%;
	}

	.signupFormBox {
		width: 90%;
		margin: 60px auto 10px auto;
		padding: 20px;
	}

	.signupInputRow {
		flex-direction: column;
		gap: 0;
	}
}

/* schedulingTimelineSection */

.initialSchedulingTimelineSection {
	height: 100%;
	padding: 15px 50px;
	border-radius: 5px;
	display: flex;
	flex-direction: column;
	background-color: #ffffff;
}

.initialSchedulingTimelineDiv {
	flex: 1;
	display: flex;
	flex-direction: column;
	row-gap: 10px;
	justify-content: center;
	align-items: center;
	font-size: 50px;
	color: #9fa324;
}

.initialSchedulingTimelineImage {
	background-image: url("../assets/schedulingTimelinePage/initialSchedullingTimelineIcon.svg");
	width: 100px;
	height: 100px;
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
}
/* ... */

